# real-estate

./: LICENSE  README.md  pyproject.toml
src/rubti_real_estate/: calculation.py  real_estate.py  rent.py  utils.py
test/: test_compound.py
