[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rubti_real_estate"
version = "0.1"
dependencies = ["mortgage"]
requires-python = ">= 3.10"

authors = [{ name = "Thilo Wendt" }]
description = "Calculator to compare buying vs. renting"
readme = "README.md"
keywords = ["real estate", "investement"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "pre-commit"]

[project.urls]
Repository = "https://github.com/rubti/real-estate"

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["src"]
