[tool.poetry]
name = "rubti-real-estate"
version = "0.1"
description = "Calculator to compare buying vs. renting"
authors = ["Thilo Wendt <mail@thilo-wendt.de>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rubti_real_estate", from = "src" }]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10"
mortgage = "^1.0.5"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pytest = "^8.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
